<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileLibraryApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
   
    <string name="login">Login</string>
    <string name="register">Register</string>  
    <string name="searchbyisbn">searchbyisbn</string>
    <string name="reserve">Reserve</string>
    
    <string name="loginlabel">Login</string>
    <string name="registerlabel">Register</string>
    <string name="searchlabel">Search by ISBN</string>
    <string name="reservelabel">Reserve</string>
    
    <string name="loginsuccess">Login Success</string>
    <string name="registersuccess">Register Success</string>
    <string name="searchsuccess">Search Success</string>
    <string name="reservationsuccess">Reservation Success</string>
    <string name="category_prompt">Choose a category</string>
    
    
   <string name="scan">Scan</string>
   <string name="scan_resut_lable">Scan Result:</string>
   <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it. </string>
   <string name="findbook">search</string>
    
     <string-array name="category_arrays">
     <item>Title</item>
     <item>Author</item>
     <item>ISBN</item>
     <item>Keywords</item>
   </string-array>
     <string name="Scan">Scan</string>
     <string name="Renew">Renew</string>
     
     
   <string name="mymenu_label">My Menu</string>
   <string name="myaccount_label">My Account</string>
   <string name="search_label">SEARCH HERE</string>
   <string name="reminder_label">REMINDER HERE</string>
   <string name="searchBy_Isbn">isbn</string>
   <string name="Search">Search</string>
   <string name="textView_searchby">Search By</string>
   
   <string name="doyouhavethebookinhand_button">Do you have the book in hand?</string>
   <string name="search_button">Search for a book</string>
   
   <string name="booksborrowed_button">Books Borrowed</string>
   <string name="duedates_button">Due Dates</string>
   <string name="latefee_button">Late Fee</string>
   <string name="renewbooks_button">Renew Books</string>
   <string name="accountinfo_button">Account Info</string>
   <string name="booksoncall_button">Books on call</string>
   <string name="requestsonintercall_button">Requests on Intercalls</string>
   <string name="search">Search</string>
   <string name="lbl_user_active">you are logged in as</string>
   <string name="btn_SEARCH_details">Show Detail</string>
   <string name="Reserve">reserve</string>
   <string name="Fine">Fine</string>
   <string name="EmptyStr"></string>
   <string name="not_registered">Not a Registered User?</string>
   <string name="welcome_new_user">Register Here</string>
   
</resources>