<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="252dp"
        android:layout_gravity="center"
        android:layout_weight="0.72"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_MA_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_MA_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_MA_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <Button
            android:id="@+id/btn_MA_reserve"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve" />

        <Button
            android:id="@+id/btn_MA_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Scan" />

    </LinearLayout>

</LinearLayout>