<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="25dip"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
      <TextView
         android:text="@string/myaccount_label"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="24.5sp" />
      <Button
         android:id="@+id/booksborrowed_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/booksborrowed_button"/>
   
      <Button
         android:id="@+id/renewbooks_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/renewbooks_button"/>
        
   </LinearLayout>
</LinearLayout>