<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
 
  <!-- Screen Design for Photos -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:text="@string/search_label"
            android:textSize="24.5sp" />

        <Button
            android:id="@+id/doyouhavethebookinhand_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/doyouhavethebookinhand_button" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button" />
    </LinearLayout>
  
</LinearLayout>