<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:background="@drawable/loginbackgroud"
    android:orientation="vertical"
    android:padding="@dimen/button_padding" >

<TextView 
	android:id="@+id/login_textview_for_title"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/loginlabel"
    android:textSize="20sp"
    android:gravity="center"
    android:textStyle="bold"
    />
<TextView 
	android:id="@+id/login_textview_for_username"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="Username"
    />

<EditText
    android:id="@+id/login_etxt_username"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/login_editText"
    android:singleLine="true"
    android:text="" >

</EditText>
<TextView 
	android:id="@+id/tv2"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="Password"
    />

<EditText
    android:id="@+id/login_etxt_password"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/login_editText"
    android:singleLine="true"
    android:text="" >

</EditText>
<TextView 
	android:id="@+id/dummy"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:visibility="invisible"
    />
<Button
    android:id="@+id/btn_login"
    android:layout_width="fill_parent"
    android:layout_height="46dp"
    android:background="@color/login_editText"
    android:onClick="btn_login_click"
    android:padding="@dimen/button_padding"
    android:text="Login" />

<!-- Link to Registration Screen -->		
<TextView android:id="@+id/not_register" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="40dip"
		  		android:layout_marginBottom="10dip"
		  		android:text="@string/not_registered"
		  		android:gravity="center"
		  		android:textSize="20sp"
		  		android:textColor="#0b84aa"
		  		/>
		  <TextView android:id="@+id/link_to_register" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginBottom="40dip"
		  		android:text="@string/welcome_new_user"
		  		android:gravity="center"
		  		android:textSize="20sp"
		  		android:textColor="#0b84aa"
		  		/>
</LinearLayout>
